--- a/teszt.vcproj
+++ b/teszt.vcproj
@@ -120,6 +120,7 @@
 				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="."
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableEnhancedInstructionSet="2"
@@ -248,6 +249,14 @@
 			</File>
 			<File
 				RelativePath=".\containers\queue.h"
+				>
+			</File>
+			<File
+				RelativePath=".\math\ssemtx4x3.h"
+				>
+			</File>
+			<File
+				RelativePath=".\math\ssevec3.h"
 				>
 			</File>
 			<File
