--- a/teszt.vcproj
+++ b/teszt.vcproj
@@ -252,6 +252,18 @@
 				>
 			</File>
 			<File
+				RelativePath=".\render\renderindexbuffer.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\rendermaterial.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\rendermesh.h"
+				>
+			</File>
+			<File
 				RelativePath=".\render\renderqueue.h"
 				>
 			</File>
@@ -261,6 +273,18 @@
 			</File>
 			<File
 				RelativePath=".\render\rendersystem.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\rendertexture.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\rendertriset.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\rendervertexbuffer.h"
 				>
 			</File>
 			<File
