--- a/teszt.vcproj
+++ b/teszt.vcproj
@@ -39,7 +39,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=".\"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -185,6 +185,10 @@
 			>
 			<File
 				RelativePath=".\math\aabox.h"
+				>
+			</File>
+			<File
+				RelativePath=".\base\assert.h"
 				>
 			</File>
 			<File
