--- a/teszt.vcproj
+++ b/teszt.vcproj
@@ -141,7 +141,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="winmm.lib"
+				AdditionalDependencies="winmm.lib d3d9.lib d3dx9.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -248,6 +248,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\scene\node.h"
+				>
+			</File>
+			<File
 				RelativePath=".\physics\physicsbody.h"
 				>
 			</File>
@@ -293,6 +297,14 @@
 			</File>
 			<File
 				RelativePath=".\render\rendershader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\renderstate.h"
+				>
+			</File>
+			<File
+				RelativePath=".\render\renderstatebuffer.h"
 				>
 			</File>
 			<File
@@ -404,6 +416,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\file\filesystem.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\teszt\main.cpp"
 				>
 			</File>
@@ -412,11 +428,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\scene\node.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\physics\physicssystem.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\render\rendersystem.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\render\rendertexture.cpp"
 				>
 			</File>
 			<File
