--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -161,6 +161,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\base\colorf.h"
+				>
+			</File>
+			<File
 				RelativePath=".\math\dvec3.h"
 				>
 			</File>
@@ -390,6 +394,10 @@
 			</File>
 			<File
 				RelativePath=".\physics\physicssystem.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\render\rendermesh.cpp"
 				>
 			</File>
 			<File
