--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -81,6 +81,7 @@
 			OutputDirectory="Release"
 			IntermediateDirectory="Release"
 			ConfigurationType="4"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -99,13 +100,19 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				InlineFunctionExpansion="2"
+				FavorSizeOrSpeed="1"
+				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories=".\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;"
+				ExceptionHandling="0"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
+				CallingConvention="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -257,6 +264,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\render\renderobject3d.h"
+				>
+			</File>
+			<File
 				RelativePath=".\render\renderqueue.h"
 				>
 			</File>
@@ -397,7 +408,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\render\rendermaterial.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\render\rendermesh.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\render\renderobject3d.cpp"
 				>
 			</File>
 			<File
