--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -166,6 +166,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\utils\chunkstream.h"
+				>
+			</File>
+			<File
 				RelativePath=".\physics\collisionsystem.h"
 				>
 			</File>
@@ -266,11 +270,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
@@ -506,6 +510,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\utils\chunkstream.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\file\filesystem.cpp"
 				>
 			</File>
@@ -623,6 +631,10 @@
 			</File>
 			<File
 				RelativePath=".\scripting\lualib\lzio.c"
+				>
+			</File>
+			<File
+				RelativePath=".\utils\mmod-loader.cpp"
 				>
 			</File>
 			<File
