--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -270,11 +270,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
@@ -459,6 +459,10 @@
 			</File>
 			<File
 				RelativePath=".\render\texturemanager.h"
+				>
+			</File>
+			<File
+				RelativePath=".\utils\Tga.h"
 				>
 			</File>
 			<File
