--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -283,11 +283,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
@@ -340,6 +340,10 @@
 			</File>
 			<File
 				RelativePath=".\scene\node.h"
+				>
+			</File>
+			<File
+				RelativePath=".\scene\nodefactory.h"
 				>
 			</File>
 			<File
@@ -400,6 +404,10 @@
 			</File>
 			<File
 				RelativePath=".\utils\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\scene\rootobject.h"
 				>
 			</File>
 			<File
@@ -671,6 +679,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\scene\nodefactory.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\render\objectmanager.cpp"
 				>
 			</File>
@@ -688,6 +700,10 @@
 			</File>
 			<File
 				RelativePath=".\render\rendersystem.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\scene\rootobject.cpp"
 				>
 			</File>
 			<File
