--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -283,11 +283,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
@@ -708,6 +708,10 @@
 			</File>
 			<File
 				RelativePath=".\scene\rootobject.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\scene\sceneloader.cpp"
 				>
 			</File>
 			<File
