--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -103,6 +103,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories=".\"
@@ -283,11 +284,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
@@ -432,6 +433,10 @@
 			</File>
 			<File
 				RelativePath=".\math\ssevec3.h"
+				>
+			</File>
+			<File
+				RelativePath=".\containers\stack.h"
 				>
 			</File>
 			<File
