--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -184,6 +184,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\physics\constraint.h"
+				>
+			</File>
+			<File
 				RelativePath=".\math\dvec3.h"
 				>
 			</File>
@@ -284,11 +288,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
