--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -113,7 +113,7 @@
 				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
 				CallingConvention="2"
 			/>
@@ -189,6 +189,10 @@
 			</File>
 			<File
 				RelativePath=".\physics\contact.h"
+				>
+			</File>
+			<File
+				RelativePath=".\physics\contactmanager.h"
 				>
 			</File>
 			<File
@@ -292,11 +296,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
@@ -549,6 +553,10 @@
 			</File>
 			<File
 				RelativePath=".\utils\chunkstream.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\physics\contactmanager.cpp"
 				>
 			</File>
 			<File
