--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -308,11 +308,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
@@ -444,7 +444,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\render\shape.h"
+				RelativePath=".\physics\collision\shapes\shape.h"
+				>
+			</File>
+			<File
+				RelativePath=".\physics\collision\shapeintersection\shapeintersection.h"
 				>
 			</File>
 			<File
