--- a/libs/libs.vcproj
+++ b/libs/libs.vcproj
@@ -308,11 +308,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lualib\lua.h"
+				RelativePath=".\scripting\lua.h"
 				>
 			</File>
 			<File
-				RelativePath=".\scripting\lua.h"
+				RelativePath=".\scripting\lualib\lua.h"
 				>
 			</File>
 			<File
@@ -453,6 +453,10 @@
 			</File>
 			<File
 				RelativePath=".\utils\singleton.h"
+				>
+			</File>
+			<File
+				RelativePath=".\math\sorting.h"
 				>
 			</File>
 			<File
