--- a/libs/libs.cbp
+++ b/libs/libs.cbp
@@ -7,7 +7,8 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug Win32">
-				<Option output="lib" prefix_auto="1" extension_auto="1" />
+				<Option platforms="Windows;" />
+				<Option output="lib_d" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="Debug" />
 				<Option type="2" />
@@ -268,6 +269,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
