--- a/libs/libs.cbp
+++ b/libs/libs.cbp
@@ -37,7 +37,11 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-Os" />
+					<Add option="-O3" />
 					<Add option="-W" />
+					<Add option="-fcheck-new" />
 					<Add option="-DWIN32" />
 					<Add option="-DNDEBUG" />
 					<Add option="-D_LIB" />
@@ -47,6 +51,9 @@
 				<ResourceCompiler>
 					<Add directory=".\" />
 				</ResourceCompiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
 			</Target>
 		</Build>
 		<Linker>
