--- a/winteszt/winteszt.cbp
+++ b/winteszt/winteszt.cbp
@@ -9,7 +9,7 @@
 		<Build>
 			<Target title="Debug Win32">
 				<Option platforms="Windows;" />
-				<Option output="..\data\winteszt_d" prefix_auto="1" extension_auto="1" />
+				<Option output="..\data\winteszt_gnu_d" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\data" />
 				<Option object_output="Debug Win32" />
 				<Option external_deps="..\libs\lib_d.a;" />
@@ -40,7 +40,7 @@
 			</Target>
 			<Target title="Release Win32">
 				<Option platforms="Windows;" />
-				<Option output="..\data\winteszt" prefix_auto="1" extension_auto="1" />
+				<Option output="..\data\winteszt_gnu" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="..\data" />
 				<Option object_output="Release Win32" />
 				<Option external_deps="..\libs\lib.a;" />
@@ -51,6 +51,7 @@
 					<Add option="-Os" />
 					<Add option="-O3" />
 					<Add option="-W" />
+					<Add option="-fcheck-new" />
 					<Add option="-DWIN32" />
 					<Add option="-DNDEBUG" />
 					<Add option="-D_WINDOWS" />
@@ -62,8 +63,9 @@
 					<Add directory="..\libs" />
 				</ResourceCompiler>
 				<Linker>
+					<Add option="-s" />
 					<Add library="winmm" />
-					<Add library="lib.a" />
+					<Add library="..\libs\lib.a" />
 					<Add library="d3d9" />
 					<Add library="d3dx9" />
 					<Add library="dxguid" />
