--- a/libs/libs.cbp
+++ b/libs/libs.cbp
@@ -16,8 +16,10 @@
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-W" />
+					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add option="-O0" />
+					<Add option="-fcheck-new" />
 					<Add option="-DWIN32" />
 					<Add option="-D_DEBUG" />
 					<Add option="-D_LIB" />
@@ -59,6 +61,7 @@
 		<Linker>
 			<Add directory="C:\Program Files\Microsoft DirectX SDK (March 2008)\Lib\x86" />
 		</Linker>
+		<Unit filename="C:\Lacika\dolgokesvalamik\libs\containers\intr_list.h" />
 		<Unit filename="containers\fixedvector.h" />
 		<Unit filename="containers\listallocator.h" />
 		<Unit filename="containers\poolalloc.h" />
