--- a/libs/libs.cbp
+++ b/libs/libs.cbp
@@ -100,6 +100,7 @@
 		<Unit filename="physics\collision\broadphase\hgridbroadphase.cpp" />
 		<Unit filename="physics\collision\broadphase\hgridbroadphase.h" />
 		<Unit filename="physics\collision\shapeintersection\shapeintersection.h" />
+		<Unit filename="physics\collision\shapes\shape.cpp" />
 		<Unit filename="physics\collision\shapes\shape.h" />
 		<Unit filename="physics\collision\system\collisionsystem.h" />
 		<Unit filename="physics\collision\system\constraint.h" />
